--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   CLAAssistant:
-    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: "CLA Assistant"
@@ -22,7 +21,7 @@ jobs:
           path-to-signatures: 'signatures/version1/cla.json'
           path-to-document: 'https://github.com/skriptifies/skriptify/blob/main/LICENSE.md' # e.g. a CLA or a DCO document
           # branch should not be protected
-          branch: 'main'
+          branch: 'signatures'
           allowlist: user1,bot*
 
          # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
